processed/gerrit/txt/56754.txt
Change:     56754
Subject:    LU-18387 kernel: new kernel [RHEL 9.5 5.14.0-503.2.1.el9_5]
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/56754
Change-Id:  I1bce12b2b7190bcbd880916049667630aba700c8
Project:    fs/lustre-release
Branch:     b2_15
Status:     MERGED
Owner:      Jian Yu
Created:    2024-10-22 03:17:18.000000000
Updated:    2024-11-05 06:30:29.000000000
Patch Set:  6
Insertions: +103
Deletions:  -3
Comments:   4 (0 unresolved)

--- Labels ---
  Code-Review: Yang Sheng: +1; Oleg Drokin: +2
  Verified: jenkins: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Jian Yu, Yang Sheng, Shaun Tancheff

--- Commit Message ---
LU-18387 kernel: new kernel [RHEL 9.5 5.14.0-503.2.1.el9_5]

This patch makes changes to support new RHEL 9.5 release
for Lustre client.

Lustre-change: https://review.whamcloud.com/56748
Lustre-commit: TBD (from a347e8bece92e00af02d5499b092700954c4fb8e)

LU-17243 build: compatibility updates for kernel 6.6

linux kernel v5.19-rc1-4-gc4f135d64382
  workqueue: Wrap flush_workqueue() using a macro
linux kernel v6.5-rc1-7-g20bdedafd2f6
  workqueue: Warn attempt to flush system-wide workqueues.
If __flush_workqueue(system_wq) is not available fall back to
flush_scheduled_work()

Lustre-change: https://review.whamcloud.com/52908
Lustre-commit: a0e6d6f7327598d13661bb14098a9f21f2035285

LU-17592 build: compatibility updates for kernel 6.8

Linux commit v6.7-rc1-3-gda549bdd15c2
  dentry: switch the lists of children to hlist
Provide trival wrappers to abstract the changed members

Lustre-change: https://review.whamcloud.com/54229
Lustre-commit: 6d27c2c8c72e853a238fd3fc7f42d658188ca02f

Test-Parameters: trivial \
  mdtcount=4 mdscount=2 clientdistro=el9.5 testlist=sanity
Test-Parameters: optional clientdistro=el9.5 testgroup=full-part-1
Test-Parameters: optional clientdistro=el9.5 testgroup=full-part-2
Test-Parameters: optional clientdistro=el9.5 testgroup=full-part-3

Change-Id: I1bce12b2b7190bcbd880916049667630aba700c8
Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Signed-off-by: Jian Yu <yujian@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/56754
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Yang Sheng <ys@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (Jian Yu, 2024-10-22 03:17:18.000000000) ---
Uploaded patch set 1.

--- Message (jenkins, 2024-10-22 05:32:54.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/108433/ : SUCCESS

--- Message (Jian Yu, 2024-10-22 05:56:39.000000000) ---
Patch Set 1: Verified-1

In file included from /tmp/rpmbuild-lustre-root-cfcxfXNf/BUILD/lustre-2.15.5_1_g4b77589/libcfs/libcfs/libcfs_mem.c:35:
/tmp/rpmbuild-lustre-root-cfcxfXNf/BUILD/lustre-2.15.5_1_g4b77589/libcfs/libcfs/libcfs_mem.c: In function 'exit_libcfs_vfree_atomic':
include/linux/workqueue.h:694:9: error: call to '__warn_flushing_systemwide_wq' declared with attribute warning: Please avoid flushing system-wide workqueues. [-Werror=attribute-warning]
  694 |         __warn_flushing_systemwide_wq();                                \
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/rpmbuild-lustre-root-cfcxfXNf/BUILD/lustre-2.15.5_1_g4b77589/libcfs/libcfs/libcfs_mem.c:175:9: note: in expansion of macro 'flush_scheduled_work'
  175 |         flush_scheduled_work();
      |         ^~~~~~~~~~~~~~~~~~~~

--- Message (Jian Yu, 2024-10-23 07:00:44.000000000) ---
Uploaded patch set 2.

--- Message (jenkins, 2024-10-23 08:02:17.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/108461/ : SUCCESS

--- Message (Jian Yu, 2024-10-23 18:25:31.000000000) ---
Patch Set 3: Patch Set 2 was rebased

--- Message (jenkins, 2024-10-23 19:26:37.000000000) ---
Patch Set 3: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/108471/ : FAILURE

--- Message (Jian Yu, 2024-10-25 21:54:32.000000000) ---
Patch Set 4: Patch Set 3 was rebased

--- Message (jenkins, 2024-10-25 22:33:36.000000000) ---
Patch Set 4: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/108528/ : SUCCESS

--- Message (Jian Yu, 2024-10-30 17:28:13.000000000) ---
Uploaded patch set 5: Patch Set 4 was rebased.

--- Message (jenkins, 2024-10-30 18:11:59.000000000) ---
Patch Set 5: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/108675/ : SUCCESS

--- Message (Yang Sheng, 2024-11-02 14:57:08.000000000) ---
Patch Set 5: Code-Review+1

--- Message (Jian Yu, 2024-11-04 16:21:44.000000000) ---
Patch Set 5:

DCO-9864

--- Message (Oleg Drokin, 2024-11-05 06:30:00.000000000) ---
Patch Set 5: Code-Review+2

--- Message (Oleg Drokin, 2024-11-05 06:30:29.000000000) ---
Change has been successfully cherry-picked as 0c6b2bfcf4c09a34503a1496bfc0b9234117061d by Oleg Drokin
